Bug 582430 - fixed initial parameters
If the parameter isRandom in the createEvenManager method is set to
true, the previously set parameters are overwritten.

Change-Id: Ib5bcca0e46b936dbaf07af3c260cd295dc9ac912